Bug 339436 - Plasma 5 - the monitor KCM has a fixed size 'box' to display the monitor's details (resolution etc) that always has its own scrollbar when displaying any monitor information that makes the KCM looks unsightly and difficult to use
Summary: Plasma 5 - the monitor KCM has a fixed size 'box' to display the monitor's de...
Status: RESOLVED FIXED
Alias: None
Product: KScreen
Classification: Plasma
Component: kcm (other bugs)
Version First Reported In: 5.0.92
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-26 18:12 UTC by ken taylor
Modified: 2015-02-05 16:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments
A screenshot identifying the box & its scrollbar discussed in the bug report (280.07 KB, image/png)
2014-09-26 18:14 UTC, ken taylor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ken taylor 2014-09-26 18:12:43 UTC
I'm trying out the Plasma 5, Neon 5 ISO released on 29th August 2014 running from a live USB stick.

If you launch System Settings, and go to the Monitor>Display configuration page & click on one of the monitors in the display in the top half of the content area then it's details appear in a box in the lower half of the content area. With the System Settings window at its default size the contents of this box are always too tall to fit inside the box properly (this is the same with both Oxygen and the bulkier Breeze themes) so a vertical scrollbar appears for this box. This scrollbar is only needed to scroll the contents of the box a very short distance.

A second vertical scrollbar is positioned just to the right of the scrollbar for the box - this one is for the content area as a whole and again only needs to scroll a very short distance. I've attached a screenshot indicating the fixed size box that's the issue.

Would it be possible to do something to remove one of the scrollbars - it might look best to keep the right hand scrollbar that scrolls the entire content area and redesign the box identified in the screenshot so that a scrollbar just for it isn't needed.

Note that the new Breeze theme takes up a little more room than the Oxygen theme - it should work with both.

Reproducible: Always
Comment 1 ken taylor 2014-09-26 18:14:44 UTC
Created attachment 88853 [details]
A screenshot identifying the box & its scrollbar discussed in the bug report
Comment 2 Daniel Vrátil 2015-02-05 16:04:09 UTC
Git commit d845a15cb501a9b99deec553ec10922812169d4f by Dan Vrátil.
Committed on 05/02/2015 at 16:03.
Pushed by dvratil into branch 'Plasma/5.2'.

KCM: prevent nested scrollbars when opened in System Settings

System Settings makes the entire KCM scrollable, but with ControlPanel also
being QScrollArea we would end up with two ugly nested scrollbars.
FIXED-IN: 5.2.1

M  +6    -12   kcm/src/controlpanel.cpp
M  +2    -2    kcm/src/controlpanel.h
M  +2    -0    kcm/src/kcm_kscreen.cpp
M  +1    -0    kcm/src/widget.cpp

http://commits.kde.org/kscreen/d845a15cb501a9b99deec553ec10922812169d4f