KCM: prevent nested scrollbars when opened in System Settings

System Settings makes the entire KCM scrollable, but with ControlPanel also
being QScrollArea we would end up with two ugly nested scrollbars.

BUG: 339436
FIXED-IN: 5.2.1